fix card wrap

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
 }
 
 .card {
-    border: solid black 3px;
+    border: solid black 2px;
     height: 250px;
     width: 250px;
     font-size: 16px;
